// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLabware snapshot tests 1`] = `
Object {
  "deprecated": false,
  "dimensions": Object {
    "offsetX": 10,
    "offsetY": 10,
    "offsetZ": 5,
    "overallHeight": 50,
    "overallLength": 50,
    "overallWidth": 50,
  },
  "metadata": Object {
    "displayCategory": "wellPlate",
    "displayLengthUnits": "mm",
    "displayVolumeUnits": "uL",
    "name": "fake labware",
  },
  "ordering": Array [
    Array [
      "A1",
    ],
    Array [
      "A2",
    ],
  ],
  "otId": "mock-id",
  "parameters": Object {
    "format": "96Standard",
    "isTiprack": false,
    "wellShape": "circular",
  },
  "vendor": Object {
    "sku": "t40u9sernisofsea",
    "vendor": "opentrons",
  },
  "wells": Object {
    "A1": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "A2": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 10,
      "y": 0,
      "z": 0,
    },
  },
}
`;

exports[`createLabware snapshot tests 2`] = `
Object {
  "deprecated": false,
  "dimensions": Object {
    "offsetX": 10,
    "offsetY": 10,
    "offsetZ": 5,
    "overallHeight": 50,
    "overallLength": 50,
    "overallWidth": 50,
  },
  "metadata": Object {
    "displayCategory": "wellPlate",
    "displayLengthUnits": "mm",
    "displayVolumeUnits": "uL",
    "name": "fake labware 2",
  },
  "ordering": Array [
    Array [
      "A1",
      "B1",
      "C1",
    ],
    Array [
      "A2",
      "B2",
      "C2",
    ],
  ],
  "otId": "mock-id",
  "parameters": Object {
    "format": "irregular",
    "isTiprack": false,
    "wellShape": "circular",
  },
  "wells": Object {
    "A1": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 0,
      "y": 18,
      "z": 0,
    },
    "A2": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 9,
      "y": 18,
      "z": 0,
    },
    "B1": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 0,
      "y": 9,
      "z": 0,
    },
    "B2": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 9,
      "y": 9,
      "z": 0,
    },
    "C1": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "C2": Object {
      "depth": 40,
      "diameter": 30,
      "totalLiquidVolume": 100,
      "x": 9,
      "y": 0,
      "z": 0,
    },
  },
}
`;
